Tue Jan 27 08:28:22 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - drivers/libusb.c, drivers/richcomm_usb.c: broaden the libusb_close() call to all
   non Linux, since it has been confirmed to be needed on FreeBSD too (thanks to
   Daniel O'Connor) ; also bump the respective version

2.4.0-pre2

Wed Jan 21 12:03:25 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - configure.in: 2.4.0-pre2
 
Wed Jan 21 11:59:52 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - NEWS: last completion

Wed Jan 21 11:46:34 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 * NUT Python support udpate:
   - scripts/python/*: fix the missing PyNUTClient name update
   - scripts/python/README: some more completion
   (thanks to David Goncalves for the patch)

Sat Jan 17 23:05:22 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp,bcmxcp_usb: Add readings from extended limit block, like max min
    voltage for transfer to trim/boost and to battery. Moved this code into separated
    functions. Also corrected power to voltage in the previous change, and some spelling.
    Change driver version to 0.21.

Tue Jan 15 00:15:23 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp,bcmxcp_usb: Add input.voltage.nominal, Change driver version to 0.20.

Wed Jan 14 23:43:00 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp,bcmxcp_usb: Change driver version to 0.19.

Wed Jan 14 23:35:10 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp.c: Add ups.power value.

Wed Jan 14 21:45:10 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - drivers/bcmxcp.c: Changed status info to include OL with BYPASS, BOOST, TRIM.
    Add some more meters like power and current.nominal (max).

Wed Jan 14 22:22:51 UTC 2009 / Arnaud Quette <aquette.dev@gmail.com>

 - tools/Makefile.am: fix the name of the "dist-hook" rule, which triggers the