@@ -1,10 +1,10 @@
 Desc: Udev script for NUT USB drivers
 File: scripts/udev/README
-Date: 8 January 2007
+Date: 27 January 2008
 Auth: Arnaud Quette <aquette.dev@gmail.com>
 
 This document introduces the Linux udev script for NUT USB
-drivers (usbhid-ups, bcmxcp_usb and tripplite_usb).
+drivers (usbhid-ups, bcmxcp_usb, tripplite_usb, ...).
 
 These are needed on Linux systems running udev (recommended
 as of kernel 2.6.3, and mandatory as of 2.6.14 and higher).
@@ -21,16 +21,21 @@ Installation
 ------------
 
 For most users, these files will be automatically installed in
-/etc/udev upon "make install", if that directory exists. You can
+/etc/udev (or /lib/udev) upon "make install", if that directory exists. You can
 specify an alternate directory with ./configure --with-udev-dir=DIR.
 
 Manual installation
 -------------------
 
 To install them manually, copy nut-usbups.rules to /etc/udev/rules.d
-using the command
+(or /lib/udev/rules.d on newer systems) using the command
 
-$ cp -f nut-usbups.rules /etc/udev/rules.d/52_nut-usbups.rules
+$ cp -f nut-usbups.rules /etc/udev/rules.d/52-nut-usbups.rules
+
+You will need to refresh the bus to avoid a reboot for these rules to be
+active. You can do so using:
+
+$ udevadm trigger --subsystem-match=usb_device
 
 You can then plug your UPS USB cord, or unplug / replug it to
 refresh the device permission, and start NUT.
